# backend

./: .gitignore  Cargo.toml  README.md  app.js  app.py  config.js  db.py  package.json
controllers/: auth.js  error.js  user.js
define/: common-error.js  define.js  response.js
middleware/: is-auth.js
models/: user.js
public/: Authentication Sample.postman_collection.json
routes/: auth.js  user.js
src/: private.rs
src/routes/authorization/token/: request_access_token.rs
utils/: file.js  models.js  password-random.js  user-token.js  validator.js
views/: mail-forgot-password.ejs
